fix mobile overflow padding

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,7 +16,17 @@
   grid-gap: 2rem;
   height: 100%;
   width: 100%;
-  padding: 0 2%;
+  padding: 2%;
+  overflow: hidden scroll;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background-clip: content-box;
+    background-color: hsl(220, 13%, 20%);
+  }
   &__header{
     display: grid;
     justify-items: center;
